--- a/public/assets/css/amara.css
+++ b/public/assets/css/amara.css
@@ -15,21 +15,9 @@ padding:none;
 .up{
     margin-bottom: 0px;
 }
-/* .btn{
-    background-color:  #b65b11;
-    border-color: #b65b11;
-    cursor: pointer;
-} */
-
-/* .btn:hover{
-    background-color:  white;
-    border-color: #b65b11;
-
-} */
 
 /* Background image */
 .jumbotron {
-    text-align: center;
     padding-top: 10rem;
     padding-bottom: 10rem;
     text-shadow: 2px 2px #000;
@@ -38,11 +26,11 @@ padding:none;
   
   .lead span {
     color: orange;
-    font-weight: bold;
+    text-align: left;
   }
   
   .bg-cover {
-      background-image: url(../../assets/images/header.png);
+      background-image: url(../../assets/images/header.JPG);
     background-size: cover;
     color: white;
     height:600px;
@@ -63,50 +51,55 @@ padding:none;
     z-index: -1;
   }
 .sign ul li{
-    color: #040404;
-margin: 25px 0;
+    color: #fff;
+    margin: 0px;
     margin-bottom: 25px;
-font-size: 14px;
-letter-spacing: 2px;
-font-weight: 400;
-list-style-type: none;
+    font-size: 14px;
+    letter-spacing: 2px;
+    font-weight: 400;
+    list-style-type: none;
 }
 .drop-pad p{
     line-height: 1.8em;
     font-size: 1em;
-    margin-left:30px;
+    margin: 0px;
     margin-bottom: 1em;
-    color: #999;
+    color: #fff;
 }
 .drop-pad h3{
     font-size: 26px;
-margin-bottom: 25px;
-color: #545454;
-letter-spacing: 1px;
-margin-top: 5px;
-text-align: center;
+    margin-bottom: 25px;
+    color: #fff;
+    letter-spacing: 1px;
+    margin-top: 5px;
+    text-align: left;
 }
-input#name, input#phone, input#email {
+input#name, input#phone, input#email textarea#message {
     height: 50px;
+    background-color: transparent;
+    border: 0.5px solid #fff!important;
 }
 .login-pad form input[type="text"], .login-pad form input[type="email"] {
-    border: none;
-        border-bottom-color: currentcolor;
-        border-bottom-style: none;
-        border-bottom-width: medium;
+    background-color: transparent;
+    border: 0.5px solid #fff!important;
     border-bottom: 2px solid #000;
     margin: 0 0 24px 0;
     width: 100%;
     padding: 10px 10px;
     font-size: 14px;
     outline: none;
-    color: #000;
+    color: #fff;
     border-radius: 0;
     font-weight: 600;
 }
+
+#message {
+    background-color: transparent!important;
+}
+
 .login-pad .checkbox {
     font-size: 14px;
-    color: #999;
+    color: #000;
     cursor: pointer;
     font-weight: 400;
     margin:0px;
@@ -128,19 +121,6 @@ label {
     margin-bottom: 10px;
 }
 
-
-/* .emoji{
-    margin-top:50px;
-   
-    position: absolute;
-    width: 100%;
-    height: 300px; 
-    
-    padding-top:100px;
-
-}
-
-} */
 /* Footer */
 @import url('https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css');
 section {
@@ -149,19 +129,20 @@ section {
 
 section .section-title {
     text-align: center;
-    color: #007b5e;
+    color: #fff;
     margin-bottom: 50px;
     text-transform: uppercase;
 }
 #footer {
-    background: #b65b11 !important;
+    background: #232323!important;
+    color: #fff!important;
 }
 #footer h5{
 	padding-left: 10px;
     border-left: 3px solid #eeeeee;
     padding-bottom: 6px;
     margin-bottom: 20px;
-    color:#ffffff;
+    color:#fff!important;
 }
 #footer a {
     color: #ffffff;
@@ -185,10 +166,10 @@ section .section-title {
 }
 #footer ul.social li a,
 #footer ul.quick-links li a{
-	color:#ffffff;
+	color:#fff!important;
 }
 #footer ul.social li a:hover{
-	color:#eeeeee;
+	color:#fff;
 }
 #footer ul.quick-links li{
 	padding: 3px 0;
@@ -215,4 +196,36 @@ section .section-title {
     padding-bottom: 0px;
     margin-bottom: 10px;
 }
+}
+
+.nav-button {
+    background-color: #fff;
+    border: 0.5px solid #006838;
+    -webkit-box-shadow: 0px 2px 14px -8px rgba(0,0,0,1);
+    -moz-box-shadow: 0px 2px 14px -8px rgba(0,0,0,1);
+    box-shadow: 0px 2px 14px -8px rgba(0,0,0,1);
+    width: 200px;
+    height: 40px;
+    border-radius: 50px;
+    margin: auto;
+    color: #006838;
+}
+
+.nav-button:hover {
+  background-color: #009444;
+  color: #fff;
+  border: none;
+}
+
+/*.jumbo-button {
+    margin-top: 180px;
+    width: 250px!important;
+}
+
+.jumbop {
+    font-size: 25px;
+}
+
+.jumboh {
+    font-size: 55px;*/
 }
