New changes added

--- a/public/assets/css/styless.css
+++ b/public/assets/css/styless.css
@@ -108,15 +108,13 @@ h1, h2, h3, h4, h5, h6 {
   .l-nav .nav-main .brand-container {
     padding: 0 0 10px 0;
     display: flex;
-    overflow: hidden;
+    /*overflow: hidden;*/
     cursor: pointer; }
     .l-nav .nav-main .brand-container .brand-icon {
       width: auto;
       height: 40px;
       margin-right: 15px;
-      align-self: flex-end;
-      margin-left: -84px;
-      transition: margin .4s; }
+      align-self: flex-end; }
     .l-nav .nav-main .brand-container .brand-text {
       width: auto;
       height: 40px;
@@ -454,13 +452,13 @@ h1, h2, h3, h4, h5, h6 {
     /* Landscape tablets and desktop or laptops */ }
     @media only screen and (min-width: 992px) {
       .l-section.who-we-are {
-        padding: 0 0 80px 0; } }
+        padding: 0px; } }
     .l-section.who-we-are .section-bg {
       width: 80%;
       height: auto;
       position: relative;
       margin-left: 10%;
-      margin-bottom: 60px;
+      margin-bottom: 2px;
       /* Landscape tablets and desktop or laptops */ }
       @media only screen and (min-width: 992px) {
         .l-section.who-we-are .section-bg {
@@ -478,7 +476,8 @@ h1, h2, h3, h4, h5, h6 {
         padding: 6px 24px;
         background-color: #006838;
         color: white;
-        margin-bottom: 20px; }
+        margin-bottom: 20px;
+        font-size: 2em; }
       .l-section.who-we-are .section-content .section-body {
         width: calc(100% - 60px);
         height: auto;
@@ -490,6 +489,7 @@ h1, h2, h3, h4, h5, h6 {
           .l-section.who-we-are .section-content .section-body {
             width: 60%;
             height: auto;
+            font-size: 14px;
             margin: 0 auto;
             max-width: 600px; } }
   .l-section.what-we-do .pane.left, .l-section.careers-list .pane.left {
@@ -521,13 +521,13 @@ h1, h2, h3, h4, h5, h6 {
         letter-spacing: 0; }
       .l-section.what-we-do .pane.left .pane-content .pane-item .pane-item-title, .l-section.careers-list .pane.left .pane-content .pane-item .pane-item-title {
         font-family: "Roboto-Bold", Georgia, serif;
-        font-size: 16px;
+        font-size: 2em;
         color: #ff595f;
         margin: 0 auto 10px;
         letter-spacing: 0; }
       .l-section.what-we-do .pane.left .pane-content .pane-item .pane-item-body, .l-section.careers-list .pane.left .pane-content .pane-item .pane-item-body {
         color: black;
-        font-size: 13px;
+        font-size: 14px;
         line-height: 2; }
       .l-section.what-we-do .pane.left .pane-content .pane-item .mvp-sprint-button, .l-section.careers-list .pane.left .pane-content .pane-item .mvp-sprint-button {
         margin-top: 10px; }
@@ -754,6 +754,14 @@ h1, h2, h3, h4, h5, h6 {
     background-color: #006838;
     border-top: solid 1px #006838;
     color: white; }
+
+    .btn-header {
+      margin-left: 60px!important;
+      width: 200px!important;
+      border-radius: 50px!important;
+      background-color: #fff!important;
+      color: #006838!important;
+    }
     .btn.btn-color2:hover, .btn.btn-color1:hover {
       border-top: solid 1px rgba(255, 255, 255, 0.3);
       box-shadow: -3px 5px 10px rgba(0, 0, 0, 0.1);
@@ -978,4 +986,10 @@ section .section-title {
 }
 
 
+}
+
+.brand-logo {
+  margin-left: 0px;
+  width: 100px!important;
+  height: 40px;
 }
