--- a/public/assets/css/form.css
+++ b/public/assets/css/form.css
@@ -26,6 +26,7 @@ body{
     /* margin-bottom: 10px; */
     margin-top:10px;
     padding-top: 3%;
+    Z-index:1;
 
     
 }
@@ -45,15 +46,29 @@ body{
     #msform{
         width:80%;
         margin:0 auto;
-        
+       
         position:relative;
         background-color:white;
     }
 }
-
+@media (min-width: 320px) and (max-width: 480px) {
+    #msform fieldset{
+        background-color:#27AE60;
+        text-align:justify;
+        border:0 none;
+        border-radius:3px;
+        /* box-shadow: 0 0 15px 1px rgba(0,0,0,0.4 ); */
+        padding:25px 20px;
+        box-sizing:border-box;
+    
+        margin:0 auto;
+        /* stacking fieldsets above each other*/
+        /* position:absolute; */
+    }
+}
 #msform fieldset{
     background-color:#27AE60;
- 
+ /* text-align:center; */
     border:0 none;
     border-radius:3px;
     /* box-shadow: 0 0 15px 1px rgba(0,0,0,0.4 ); */
@@ -128,6 +143,7 @@ label {
     cursor:pointer;
     padding:10px 5px;
     margin:10px 5px;
+
 }
 
 #msform .action-button:hover, #msform .action-button:focus{
@@ -175,6 +191,7 @@ label {
     content:counter(step);
     counter-increment:step;
     width:20px;
+    position:relative;
     line-height:20px;
     display:block;
     font-size:10px;
@@ -183,7 +200,7 @@ label {
     border-radius:50%;
     margin:0 auto 5px auto;
     border: 2px solid #27AE60;
-    z-index: -5;
+    z-index: 3;
 }
 
 /* progress bar connectors */
@@ -195,7 +212,7 @@ label {
     position:absolute;
     left:-50%;
     top:9px;
-    z-index: -1;
+    z-index:2;
  /*put it behind the numbers*/
 }
 #progressbar li:first-child:after {
